--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    hello_message: 'Hello from service'
 
 services:
     # default configuration for services in *this* file
@@ -14,7 +15,9 @@ services:
         public: false       # Allows optimizing the container by removing unused services; this also means
                             # fetching services directly from the container via $container->get() won't work.
                             # The best practice is to be explicit about your dependencies anyway.
-
+        bind:
+            $message: '%hello_message%'
+#           App\Service\SomeInterface: '@some_service'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -29,3 +32,15 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+#    App\Service\Greeting:
+#        arguments:
+#            $message: '%hello_message%'
+
+    App\Twig\AppExtension:
+        arguments:
+            $locale: '%locale%'
+
+    app.greeting:
+        public: true
+        alias: App\Service\Greeting
