--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,7 +19,22 @@ security:
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
             # form_login: true
+            form_login:
+              check_path: security_login
+              login_path: security_login
+              csrf_token_generator: security.csrf.token_manager
+              default_target_path: post_index
+          #   always_use_default_target_path: false
+          #   use_referer: true
+          #   failure_path:
+#              username_parameter: _username
+#              password_parameter: _password
+
+            logout:
+              path: security_logout
+              target: post_index
             # https://symfony.com/doc/current/security/form_login_setup.html
+
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
