Doctrine eventSubcriber - save a notificaiton as a reaction to other events

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -44,3 +44,7 @@ services:
     app.greeting:
         public: true
         alias: App\Service\Greeting
+
+    App\EventListener\LikeNotificationSubscriber:
+        tags:
+            - { name: doctrine.event_subscriber, connection: default }
