Creating a mailer class to handle email sending and generation using twig

--- a/config/packages/dev/swiftmailer.yaml
+++ b/config/packages/dev/swiftmailer.yaml
@@ -2,5 +2,5 @@
 swiftmailer:
     # send all emails to a specific address
     #delivery_addresses: ['me@example.com']
-    delivery_whitelist:
-        - '/@special\.com$/'
+#    delivery_whitelist:
+#        - '/@special\.com$/'
