storing user sessions in db

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -53,3 +53,10 @@ services:
     App\EventListener\LikeNotificationSubscriber:
         tags:
             - { name: doctrine.event_subscriber, connection: default }
+
+    Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler:
+      arguments:
+      #            - 'mysql:dbname=session_db'
+      #            - { db_username: user, db_password: my_password }
+                  - !service { class: PDO, factory: 'database_connection:getWrappedConnection' }
+                  - { lock_mode: 1 }
