--- a/config/services.yaml
+++ b/config/services.yaml
@@ -60,3 +60,7 @@ services:
       #            - { db_username: user, db_password: my_password }
                   - !service { class: PDO, factory: 'database_connection:getWrappedConnection' }
                   - { lock_mode: 1 }
+
+    App\Event\LocaleSubscriber:
+      arguments:
+      - '%kernel.default_locale%'
