creating new userPreferences after user registration(responding to event)

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -61,6 +61,10 @@ services:
                   - !service { class: PDO, factory: 'database_connection:getWrappedConnection' }
                   - { lock_mode: 1 }
 
+    App\Event\UserSubscriber:
+        arguments:
+            $defaultLocale: '%kernel.default_locale%'
+
     App\Event\LocaleSubscriber:
       arguments:
       - '%kernel.default_locale%'
